RESOLVED FIXED 287337
[scroll-animations] address WPT failures related to `timeline-scope` and `animation-timeline`
https://bugs.webkit.org/show_bug.cgi?id=287337
Summary [scroll-animations] address WPT failures related to `timeline-scope` and `ani...
Antoine Quint
Reported 2025-02-08 14:07:48 PST
We have quite a few WPT failures for tests related to `timeline-scope` and `animation-timeline`.
Attachments
Antoine Quint
Comment 1 2025-02-08 14:20:23 PST
EWS
Comment 2 2025-02-09 23:51:10 PST
Committed 290145@main (dd9fc65cb4bc): <https://commits.webkit.org/290145@main> Reviewed commits have been landed. Closing PR #40293 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2025-02-09 23:52:15 PST
Note You need to log in before you can comment on or make changes to this bug.