Source/WebCore/animation/CSSAnimation.cpp
@@ -152,7 +152,8 @@ void CSSAnimation::syncStyleOriginatedTimeline()
     ASSERT(owningElement());
     Ref target = owningElement()->element;
     Ref document = owningElement()->element.document();
-    WTF::switchOn(backingAnimation().timeline(),
+    auto& timeline = backingAnimation().timeline();
+    WTF::switchOn(timeline,
         [&] (Animation::TimelineKeyword keyword) {
             setTimeline(keyword == Animation::TimelineKeyword::None ? nullptr : RefPtr { document->existingTimeline() });
         }, [&] (const AtomString& name) {
@@ -169,6 +170,13 @@ void CSSAnimation::syncStyleOriginatedTimeline()
             setTimeline(WTFMove(viewTimeline));
         }
     );
+
+    // If we're not dealing with a named timeline, we should make sure we have no
+    // pending attachment operation for this timeline name.
+    if (!std::holds_alternative<AtomString>(timeline)) {
+        CheckedRef timelinesController = document->ensureTimelinesController();
+        timelinesController->removePendingOperationsForCSSAnimation(*this);
+    }
 
     unsuspendEffectInvalidation();
 }
